part1/todo/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todoserver-svc
spec:
  type: ClusterIP
  selector:
    app: todoserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 8080
