part1/todo/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: todoserver-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todoserver-svc
          servicePort: 2345
